book-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store-app
  labels:
    app: book-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-store
  template:
    metadata:
      labels:
        app: book-store
    spec:
      containers:
      - name: book-store
        image: haythem22/book-store-gitops:0.1.1
        ports:
        - containerPort: 8000
