book-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-store-service
spec:
  selector:
    app: book-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
