book-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-store-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: book-store-service
            port: 
              number: 80
